# AtlasLift-Telemetry-Lakehouse

./: .env.example  .gitignore  Makefile  README.md  databricks.yml  pyproject.toml
.github/workflows/: databricks-ci-cd.yml
infra/: workspace.bicep
scripts/: generate_env.py
src/: main.py
src/config/: settings.py
src/pipelines/: bronze_ingestion.py  gold_aggregation.py  silver_cleansing.py
tests/: conftest.py  test_pipelines.py
